bk_ida/gccida/g0/simplify_subtraction
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_subtraction/src/varasm.c:4140:21: error: use of undeclared identifier 'machine_mode'
decode_rtx_const( ( machine_mode)*( ( unsigned __int8 *)x + 2), x->fld[0].rtx, &val0); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_subtraction/src/varasm.c:4141:21: error: use of undeclared identifier 'machine_mode'
decode_rtx_const( ( machine_mode)*( ( unsigned __int8 *)x + 2), *( rtx *)&x[1], &val1); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/simplify_subtraction/src/obj/varasm.o] Error 1
